--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <ul>
             <li><a href="html/tablas.html"><h2>IR A TABLAS</h2></a></li>
             <li><a href="html/form.html"><h2>IR A FORM</h2></a></li>
-            <li><a href="#"><h2>IR A TEXTO</h2></a></li>
-            <li><a href=""></a></li>
-            <li><a href="">texto</a></li>
-            <li><a href="">texto</a></li>
+            <li><a href="html/texto.html"><h2>IR A TEXTO</h2></a></li>
+            <li><a href="html/semanticas.html"><h2>IR A SEMANTICAS</h2></a></li>
+            <li><a href="html/agrupacion.html"><h2>IR A AGRUPACION</h2></a></li>
+            <li><a href="html/multimedia.html"><h2>IR A MULTIMEDIA</h2></a></li>
         
         </ul>
     </div>
