--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
             <li><a href="html/semanticas.html"><h2>IR A SEMANTICAS</h2></a></li>
             <li><a href="html/agrupacion.html"><h2>IR A AGRUPACION</h2></a></li>
             <li><a href="html/multimedia.html"><h2>IR A MULTIMEDIA</h2></a></li>
+            <li><a href="html/estilos.html"><h2>IR A ESTILOS</h2></a></li>
+            
+            <!-- shift + alt + flecha abajo duplica la fila -->
+            <!-- crtl+ }  comentar-->
+            <!--ctrl + shift  -->
         
         </ul>
     </div>
