--- a/html/estilos.html
+++ b/html/estilos.html
@@ -20,6 +20,11 @@
     
 </head>
 <body>
+    
+    <h2 id="tittle_box">BOX MODEL</h2>
+    <div id="box_father">
+        <div id="box_model"></div>
+    </div>
     <h1 style="color: red; background-color: aqua;">BIENVENIDO</h1>
     <a href="../index.html"><h2>VOLVER ATRAS</h2></a>
     <ul id="list_options">
