--- a/html/flexbox.html
+++ b/html/flexbox.html
@@ -11,12 +11,12 @@
            /* display: grid; */
            /* place-items: center; */
            display: flex;
-           justify-content: center;
+           justify-content: space-around;
            align-items: center;
            align-items: center;
            gap: 40px;
            flex-wrap: wrap;
-           flex-direction: column-reverse;
+           flex-direction: row-reverse;
         }
         div#son, #son_one, #son_two, #son_three{
             height: 150px;
